sync: develop real -> mirror (APP03022-mrch.backend.somx.fiscal-api, APP03022-mrch.backend.somx.finanzas-api, APP03022-mrch.backend.somx.util-api, APP03022-mrch.bff.somx.ppsomx.fiscal, APP03022-mrch.bff.somx.ppsomx.finanzas, APP03022-mrch-bff-somx-ppsomx-util, APP03022-mrch.frontend.somx.fiscal.spa, APP03022-mrch.frontend.somx.finanzas-spa, APP03022-mrch.frontend.somx.util.spa) 2026-09-08
